--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,158 +11,158 @@ on:
 jobs:
 
   # Unit testing
-  # test:
-  #   name: Unit testing
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: checkout code
-  #       uses: actions/checkout@v4
+  test:
+    name: Unit testing
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
       
-  #     - name: Cache npm
-  #       uses: actions/cache@v3
-  #       with:
-  #         path: ~/.npm
-  #         key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-npm-
+      - name: Cache npm
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
 
-  #     - name: Install dependencies
-  #       run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-  #     - name: Run testsx
-  #       run: npm test 
+      - name: Run testsx
+        run: npm test 
 
-  # # Node.js Build & Test
+  # Node.js Build & Test
 
-  # build-and-test:
-  #   name: Build & Test
-  #   runs-on: ubuntu-latest
-  #   needs: test
+  build-and-test:
+    name: Build & Test
+    runs-on: ubuntu-latest
+    needs: test
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-  #     - name: Cache npm
-  #       uses: actions/cache@v3
-  #       with:
-  #         path: ~/.npm
-  #         key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-npm-
+      - name: Cache npm
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
 
-  #     - name: Install dependencies
-  #       run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-  #     - name: Run lint
-  #       run: npm run lint || true  
+      - name: Run lint
+        run: npm run lint || true  
 
-  #     - name: Build project
-  #       run: npm run build
+      - name: Build project
+        run: npm run build
 
 
-  # # Dependency Vulnerability Scan
+  # Dependency Vulnerability Scan
  
-  # dependency-scan:
-  #   name: Dependency Security Scan
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-test
+  dependency-scan:
+    name: Dependency Security Scan
+    runs-on: ubuntu-latest
+    needs: build-and-test
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-  #     - name: Cache npm
-  #       uses: actions/cache@v3
-  #       with:
-  #         path: ~/.npm
-  #         key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-npm-
+      - name: Cache npm
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
 
-  #     - name: Install dependencies
-  #       run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-  #     - name: Audit dependencies
-  #       run: npm audit --audit-level=high
+      - name: Audit dependencies
+        run: npm audit --audit-level=high
 
-  #     - name: Run Snyk Dependency Scan
-  #       uses: snyk/actions/node@master
-  #       env:
-  #         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-  #       with:
-  #         command: test
-  #         args: --severity-threshold=medium
+      - name: Run Snyk Dependency Scan
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: test
+          args: --severity-threshold=medium
 
 
-  # # Docker Build & Scan
+  # Docker Build & Scan
  
-  # docker-build-and-scan:
-  #   name: Docker Build & Security Scan
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-test
+  docker-build-and-scan:
+    name: Docker Build & Security Scan
+    runs-on: ubuntu-latest
+    needs: build-and-test
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-  #     - name: Log in to Docker Hub
-  #       uses: docker/login-action@v3
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-  #     - name: Build Docker image
-  #       run: docker buildx build --cache-from type=gha --cache-to type=gha,mode=max -t streamgen-ai:latest --load .
+      - name: Build Docker image
+        run: docker buildx build --cache-from type=gha --cache-to type=gha,mode=max -t streamgen-ai:latest --load .
 
-  #     - name: Save docker artifact
-  #       run: docker save streamgen-ai:latest -o streamgen-ai.tar
+      - name: Save docker artifact
+        run: docker save streamgen-ai:latest -o streamgen-ai.tar
 
-  #     - name: Uploading artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: streamgen-ai
-  #         path: streamgen-ai.tar
+      - name: Uploading artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: streamgen-ai
+          path: streamgen-ai.tar
 
-  #     - name: Scan Docker image
-  #       uses: aquasecurity/trivy-action@master
-  #       with:
-  #         image-ref: streamgen-ai:latest
-  #         format: table
-  #         exit-code: 0
-  #         severity: CRITICAL,HIGH
+      - name: Scan Docker image
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: streamgen-ai:latest
+          format: table
+          exit-code: 0
+          severity: CRITICAL,HIGH
 
-  #     - name: Snyk Container Scan
-  #       uses: snyk/actions/docker@master
-  #       env:
-  #         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-  #       with:
-  #         image: streamgen-ai:latest
-  #         args: --severity-threshold=medium
+      - name: Snyk Container Scan
+        uses: snyk/actions/docker@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          image: streamgen-ai:latest
+          args: --severity-threshold=medium
 
     # OWASP ZAP Baseline DAST Scan
   zap-dast:
     name: OWASP ZAP DAST Scan
     runs-on: ubuntu-latest
-    # needs: docker-build-and-scan
+    needs: docker-build-and-scan
     # permissions:
     #   contents: write
     #   issues: write
@@ -171,20 +171,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # - name: Download Docker image
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: streamgen-ai
+      - name: Download Docker image
+        uses: actions/download-artifact@v4
+        with:
+          name: streamgen-ai
 
-      # - name: Load Docker image
-      #   run: docker load -i streamgen-ai.tar
-
-      - name: docker pull
-        run: docker pull bkimminich/juice-shop
+      - name: Load Docker image
+        run: docker load -i streamgen-ai.tar
 
       - name: Start application
         run: |
-          docker run -d --name app -p 3000:3000 bkimminich/juice-shop:latest
+          docker run -d --name app -p 3000:3000 streamgen-ai:latest
           echo "Waiting for app..."
           for i in {1..30}; do
             if curl -sf http://localhost:3000 >/dev/null 2>&1; then
@@ -198,32 +195,9 @@ jobs:
         uses: zaproxy/action-baseline@v0.14.0
         with:
           target: "http://localhost:3000"
-          # rules_file_name: "zap-rules.tsv"
           artifact_name: "zap_report"
           allow_issue_writing: false
           cmd_options: -J report_json.json -w report_md.md -r report_html.html --autooff
-
-      # - name: Run OWASP ZAP Scan
-      #   uses: zaproxy/action-full-scan@v0.10.0
-      #   with:
-      #     target: 'http://localhost:3000' #Specify the endpoint of your application
-      #     allow_issue_writing: false
-
-      # - name: Upload ZAP Reports
-      #   if: always()
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: zap-report
-      #     path: |
-      #       report_json.json
-      #       report_md.md
-      #       report_html.html
-      #       zap.yaml
-      #     if-no-files-found: warn
-
-
-
-
 
   # Deploy to Docker Hub
  
