--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
   docker-build-and-scan:
     name: Docker Build & Security Scan
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: dependency-scan
     outputs:
       image_tag: ${{ steps.vars.outputs.TAG }}
 
@@ -210,7 +210,7 @@ jobs:
   deploy:
     name: Deploy to Docker Hub
     runs-on: ubuntu-latest
-    needs: docker-build-and-scan
+    needs: [docker-build-and-scan,zap-dast]
     if: github.ref == 'refs/heads/main'
 
     steps:
